--- a/app/src/main/res/menu/drawer_view.xml
+++ b/app/src/main/res/menu/drawer_view.xml
@@ -9,23 +9,15 @@
         <item
             android:id="@+id/prog_dr"
             android:icon="@drawable/ic_baseline_pending_24"
-            android:title="progress" />
+            android:title="Appointments" />
         <item
             android:id="@+id/pay_dr"
-            android:icon="@drawable/ic_baseline_payment_24"
+            android:icon="@drawable/ic_baseline_event_24"
             android:title="Wallet" />
         <item
             android:id="@+id/settings"
-            android:icon="@drawable/ic_baseline_book_24"
+            android:icon="@drawable/ic_baseline_support_24"
             android:title="Settings" />
-        <item
-            android:id="@+id/swapt"
-            android:icon="@drawable/ic_baseline_supervisor_account_24"
-            android:title="Switch Account" />
-        <item
-            android:id="@+id/exit"
-            android:icon="@drawable/ic_baseline_exit_to_app_24"
-            android:title="Log Out" />
 
     </group>
 </menu>
