--- a/app/src/main/res/layout/customer_wherebouts.xml
+++ b/app/src/main/res/layout/customer_wherebouts.xml
@@ -96,7 +96,7 @@
     </androidx.cardview.widget.CardView>
 
     <androidx.cardview.widget.CardView
-        android:id="@+id/wallet"
+        android:id="@+id/td_schedule"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
@@ -128,7 +128,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:clickable="true"
-        app:layout_constraintTop_toBottomOf="@+id/wallet">
+        app:layout_constraintTop_toBottomOf="@+id/td_schedule">
 
         <LinearLayout
             android:layout_width="wrap_content"
