--- a/app/src/main/res/layout/fragment_billing.xml
+++ b/app/src/main/res/layout/fragment_billing.xml
@@ -56,7 +56,7 @@
         android:layout_marginStart="24dp"
         android:layout_marginTop="8dp"
         android:layout_marginEnd="8dp"
-        android:hint="Used Component "
+        android:hint="Installed Component "
         android:inputType="text"
         app:layout_constraintEnd_toStartOf="@+id/cost1"
         app:layout_constraintStart_toStartOf="parent"
