--- a/app/src/main/res/menu/drawer_view.xml
+++ b/app/src/main/res/menu/drawer_view.xml
@@ -5,11 +5,11 @@
         <item
             android:id="@+id/new_d"
             android:icon="@drawable/ic_baseline_add_circle_outline_24"
-            android:title="Request a service" />
+            android:title="Request new service" />
         <item
             android:id="@+id/prog_dr"
             android:icon="@drawable/ic_baseline_pending_24"
-            android:title="Appointments" />
+            android:title="Active Appointments" />
         <item
             android:id="@+id/pay_dr"
             android:icon="@drawable/ic_baseline_event_24"
