--- a/app/src/main/res/menu/techs_drawer.xml
+++ b/app/src/main/res/menu/techs_drawer.xml
@@ -2,7 +2,7 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
 
     <item
-        android:id="@+id/listing"
+        android:id="@+id/td_listing"
         android:icon="@drawable/ic_baseline_request_quote_24"
         android:title="Listings" />
     <item
@@ -22,7 +22,7 @@
         android:icon="@drawable/ic_baseline_supervisor_account_24"
         android:title="Swap Account" />
     <item
-        android:id="@+id/logout"
+        android:id="@+id/td_logout"
         android:icon="@drawable/ic_baseline_exit_to_app_24"
         android:title="Log Out" />
 </menu>
