--- a/app/src/main/res/layout/fragment_custappointment_list.xml
+++ b/app/src/main/res/layout/fragment_custappointment_list.xml
@@ -3,11 +3,11 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/custAptList"
-    android:name="com.example.servicetech.ItemFragment"
+    android:name="com.example.servicetech.CustomerAppointmentFragment"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:layout_marginLeft="16dp"
     android:layout_marginRight="16dp"
     app:layoutManager="LinearLayoutManager"
-    tools:context=".CompleteFragment"
-    tools:listitem="@layout/fragment_complete" />
+    tools:context=".CustomerAppointmentFragment"
+    tools:listitem="@layout/fragment_customer_appointment" />
