--- a/app/src/main/res/menu/drawer_view.xml
+++ b/app/src/main/res/menu/drawer_view.xml
@@ -13,7 +13,7 @@
         <item
             android:id="@+id/cd_scheduled"
             android:icon="@drawable/ic_baseline_schedule_24"
-            android:title="Scheduled" />
+            android:title="Appointments" />
 
         <item
             android:id="@+id/cd_progress"
@@ -23,14 +23,6 @@
             android:id="@+id/cd_completed"
             android:icon="@drawable/ic_baseline_check_24"
             android:title="Completed" />
-        <item
-            android:id="@+id/cd_wallet"
-            android:icon="@drawable/ic_baseline_payment_24"
-            android:title="Wallet" />
-        <item
-            android:id="@+id/cd_settings"
-            android:icon="@drawable/ic_baseline_support_24"
-            android:title="Settings" />
         <item
             android:id="@+id/cd_logout"
             android:icon="@drawable/ic_baseline_exit_to_app_24"
