--- a/app/src/main/res/layout/fragment_switch_accounts.xml
+++ b/app/src/main/res/layout/fragment_switch_accounts.xml
@@ -16,7 +16,7 @@
         app:srcCompat="@drawable/account" />
 
     <Button
-        android:id="@+id/button"
+        android:id="@+id/switchAcc"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
