--- a/app/src/main/res/layout/fragment_book.xml
+++ b/app/src/main/res/layout/fragment_book.xml
@@ -140,7 +140,7 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="24dp"
             android:layout_marginEnd="8dp"
-            android:text="Cancel"
+            android:text="Back"
             app:layout_constraintEnd_toStartOf="@+id/schedule"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/stime" />
