--- a/app/src/main/res/layout/fragment_progress.xml
+++ b/app/src/main/res/layout/fragment_progress.xml
@@ -8,104 +8,65 @@
     >
 
     <TextView
+        android:id="@+id/status"
+        android:layout_width="match_parent"
+        android:layout_height="15dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="4dp"
+        android:layout_marginEnd="8dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <androidx.cardview.widget.CardView
+        android:id="@+id/pItemDets"
+        android:layout_width="match_parent"
+        android:layout_height="60dp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/status">
+
+        <TextView
+            android:id="@+id/pItem"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content" />
+
+        <TextView
+            android:id="@+id/pService"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content" />
+
+        <TextView
+            android:id="@+id/pPlace"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            />
+    </androidx.cardview.widget.CardView>
+
+    <androidx.cardview.widget.CardView
+        android:id="@+id/persDeets"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        app:layout_constraintTop_toBottomOf="@+id/pItemDets"
+        >
+        <TextView
+            android:id="@+id/persName"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            />
+        <TextView
+            android:id="@+id/persTel"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            />
+    </androidx.cardview.widget.CardView>
+
+    <TextView
         android:id="@+id/eventd"
         android:layout_width="147dp"
         android:layout_height="40dp"
         android:text='"Get event"'
         android:textAppearance="@style/TextAppearance.AppCompat.Large"
-        tools:layout_editor_absoluteX="10dp"
-        tools:layout_editor_absoluteY="447dp" />
-
-    <ProgressBar
-        android:id="@+id/progressBar"
-        style="?android:attr/progressBarStyleHorizontal"
-        android:layout_width="match_parent"
-        android:layout_height="20dp"
-        tools:layout_editor_absoluteY="551dp" />
-
-    <TextView
-        android:id="@+id/textView12"
-        android:layout_width="206dp"
-        android:layout_height="0dp"
-        android:text="Progress"
-        android:textAppearance="@style/TextAppearance.AppCompat.Large"
-        tools:layout_editor_absoluteX="10dp"
-        tools:layout_editor_absoluteY="592dp" />
-
-    <TextView
-        android:id="@+id/myName"
-        android:layout_width="145dp"
-        android:layout_height="40dp"
-        android:text="Customer Name"
-        android:textAppearance="@style/TextAppearance.AppCompat.Large"
-        android:textSize="18sp"
         tools:layout_editor_absoluteX="8dp"
-        tools:layout_editor_absoluteY="206dp" />
-
-    <TextView
-        android:id="@+id/desc"
-        android:layout_width="145dp"
-        android:layout_height="40dp"
-        android:text="Description"
-        android:textAppearance="@style/TextAppearance.AppCompat.Large"
-        tools:layout_editor_absoluteX="10dp"
-        tools:layout_editor_absoluteY="507dp" />
-
-    <TextView
-        android:id="@+id/techv"
-        android:layout_width="145dp"
-        android:layout_height="40dp"
-        android:text="Technician Name"
-        android:textAppearance="@style/TextAppearance.AppCompat.Large"
-        android:textSize="18sp"
-        tools:layout_editor_absoluteX="8dp"
-        tools:layout_editor_absoluteY="266dp" />
-
-    <TextView
-        android:id="@+id/textView3"
-        android:layout_width="151dp"
-        android:layout_height="40dp"
-        android:text='"Get Tech name"'
-        android:textAppearance="@style/TextAppearance.AppCompat.Large"
-        android:textSize="18sp"
-        tools:layout_editor_absoluteX="10dp"
-        tools:layout_editor_absoluteY="326dp" />
-
-    <TextView
-        android:id="@+id/updt"
-        android:layout_width="135dp"
-        android:layout_height="40dp"
-        android:text="Milestones"
-        android:textAppearance="@style/TextAppearance.AppCompat.Large"
-        tools:layout_editor_absoluteX="10dp"
-        tools:layout_editor_absoluteY="146dp" />
-
-    <TextView
-        android:id="@+id/eventPV"
-        android:layout_width="145dp"
-        android:layout_height="40dp"
-        android:text="event"
-        android:textAppearance="@style/TextAppearance.AppCompat.Large"
-        tools:layout_editor_absoluteX="10dp"
-        tools:layout_editor_absoluteY="387dp" />
-
-    <TextView
-        android:id="@+id/infod"
-        android:layout_width="155dp"
-        android:layout_height="wrap_content"
-        android:text='"Get Additional info"'
-        android:textAppearance="@style/TextAppearance.AppCompat.Large"
-        tools:layout_editor_absoluteX="10dp"
-        tools:layout_editor_absoluteY="80dp" />
-
-    <TextView
-        android:id="@+id/custName"
-        android:layout_width="154dp"
-        android:layout_height="40dp"
-        android:text='"Get customers Name"'
-        android:textAppearance="@style/TextAppearance.AppCompat.Large"
-        android:textSize="14sp"
-        tools:layout_editor_absoluteX="10dp"
-        tools:layout_editor_absoluteY="20dp" />
+        tools:layout_editor_absoluteY="202dp" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
